--- a/22078782.ipynb
+++ b/22078782.ipynb
@@ -18,6 +18,7 @@
     }
    ],
    "source": [
+    "#data set link:https://www.kaggle.com/datasets/smmmmmmmmmmmm/nuclear-power",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
